# cluster-api-provider-hcloud

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  Makefile  OWNERS  PROJECT  README.md  VERSIONING.md  WORKSPACE  WORKSPACE_deps.bzl  go.mod  go.sum  main.go  repositories.bzl  test.yaml  test.yaml.save
api/kubelet/v1beta1/: BUILD.bazel  doc.go  groupversion_info.go  kubelet_configuration.go  zz_generated.deepcopy.go
api/v1alpha3/: BUILD.bazel  baremetalmachine_conversion.go  baremetalmachine_types.go  baremetalmachine_webhook.go  baremetalmachinetemplate_conversion.go  baremetalmachinetemplate_types.go  bastion_host_conversion.go  bastion_host_types.go  bastion_host_webhook.go  groupversion_info.go  hcloudcluster_conversion.go  hcloudcluster_types.go  hcloudcluster_webhook.go  hcloudcluster_webhook_test.go  hcloudmachine_conversion.go  hcloudmachine_types.go  hcloudmachine_webhook.go  hcloudmachine_webhook_test.go  hcloudmachinetemplate_conversion.go  hcloudmachinetemplate_types.go  hcloudvolume_conversion.go  hcloudvolume_types.go  hetznerbaremetalmachine_conversion.go  hetznerbaremetalmachine_types.go  hetznerbaremetalmachinetemplate_conversion.go  hetznerbaremetalmachinetemplate_types.go  hetznercluster_types.go  hetznermachine_types.go  hetznervolume_types.go  tags.go  zz_generated.deepcopy.go
baremetal/centos-8_k8s-v1.19.0-runc/: BUILD.bazel  autosetup
baremetal/centos-8_k8s-v1.19.0-runc/scripts/: install.sh
cmd/cluster-api-provider-hcloud/: BUILD.bazel  deploy.sh  main.go  run.sh
config/: BUILD.bazel  cluster-template.yaml  infrastructure-components.sh  kubeadmcontrolplane_role.yaml  kubeadmcontrolplane_role_binding.yaml  kustomization.yaml  metadata.yaml
config/certmanager/: certificate.yaml
config/crd/: kustomization.yaml  kustomizeconfig.yaml
config/crd/bases/: cluster-api-provider-hcloud.capihc.com_baremetalmachines.yaml  cluster-api-provider-hcloud.capihc.com_baremetalmachinetemplates.yaml  cluster-api-provider-hcloud.capihc.com_bastionhosts.yaml  cluster-api-provider-hcloud.capihc.com_hcloudclusters.yaml  cluster-api-provider-hcloud.capihc.com_hcloudmachines.yaml  cluster-api-provider-hcloud.capihc.com_hcloudmachinetemplates.yaml  cluster-api-provider-hcloud.capihc.com_hcloudvolumes.yaml  cluster-api-provider-hcloud.capihc.com_hetznerbaremetalmachines.yaml  cluster-api-provider-hcloud.capihc.com_hetznerbaremetalmachinetemplates.yaml  (+7 more)
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml  manager_role_aggregation_patch.yaml
config/manager/: kustomization.yaml  manager.yaml  manager_auth_proxy_patch.yaml  manager_image_patch.yaml
config/rbac/: aggregate_baremetalmachines_clusterrole.yaml  aggregate_baremetalmachinetemplates_clusterrole.yaml  aggregate_hcloudclusters_clusterrole.yaml  aggregate_hcloudmachines_clusterrole.yaml  aggregate_hcloudmachinetemplates_clusterrole.yaml  aggregate_hetznerbaremetalmachines_clusterrole.yaml  aggregate_hetznerbaremetalmachinetemplates_clusterrole.yaml  kustomization.yaml  role.yaml
config/samples/: infrastructure_v1alpha3_hetznercluster.yaml
config/webhook/: kustomization.yaml  kustomizeconfig.yaml  manifests.yaml
controllers/: BUILD.bazel  baremetal_controller.go  baremetalmachine_controller.go  bastion_host_controller.go  cluster_csr_controller.go  controllers.go  hcloudcluster_controller.go  hcloudmachine_controller.go  hcloudvolume_controller.go  hetznerbaremetalmachine_controller.go  hetznercluster_controller.go  hetznermachine_controller.go  hetznervolume_controller.go  kubeadmcontrolplanes_controller.go  suite_test.go
hack/: BUILD.bazel  bazel.sh  crds.sh  print-workspace-status.sh  release-metadata.sh  release.sh  update-bazel.sh  update-deps.sh  yaml2json.go
hack/lib/: util.sh
manifests/: BUILD.bazel  Makefile  config-extvar.jsonnet  config.jsonnet  test_config_cilium.jsonnet  test_config_cilium.result.json  test_config_flannel.jsonnet  test_config_flannel.result.json  test_config_simple.jsonnet  test_config_simple.result.json  test_utils_envreplace.jsonnet  test_utils_envreplace.result.json  utils.libsonnet
manifests/calico/: BUILD.bazel  calico.libsonnet  manifests.json  test_basic.jsonnet  test_basic.result.json
manifests/cilium/: BUILD.bazel  cilium.libsonnet  ipsec.libsonnet  manifests.json  selinux.libsonnet
manifests/flannel/: BUILD.bazel  flannel.libsonnet  manifests.json
manifests/hcloud-cloud-controller-manager/: BUILD.bazel  hcloud-cloud-controller-manager.libsonnet  manifests.json
manifests/hcloud-csi/: BUILD.bazel  hcloud-csi.libsonnet  manifests.json
manifests/hcloud-ip-floater/: BUILD.bazel  hcloud-ip-floater.libsonnet  manifests.json
manifests/hcloud-metallb-floater/: BUILD.bazel  hcloud-metallb-floater.libsonnet  manifests.json
manifests/kube-keepalived-vip/: BUILD.bazel  kube-keepalived-vip.libsonnet  test_basic.jsonnet  test_basic.result.json
manifests/metallb/: BUILD.bazel  manifests.json  metallb.libsonnet  test_basic.jsonnet  test_basic.result.json
manifests/metrics-server/: BUILD.bazel  manifests.json  metrics-server.libsonnet
packer/: BUILD.bazel  packer-centos7-crio.json  packer-validate.sh
packer/centos-7/: BUILD.bazel  packer-centos7-crio.json
packer/centos-7_k8s-universal/: BUILD.bazel  image.json
packer/centos-8_bastion-host/: BUILD.bazel  image.json
packer/centos-8_k8s-v1.19.0/: BUILD.bazel  image.json
packer/centos-8_k8s-v1.19.0-privnet/: BUILD.bazel  image.json
packer/centos-8_k8s-v1.19.3/: BUILD.bazel  image.json
packer/centos-8_k8s-v1.21.2/: BUILD.bazel  image.json
packer/scripts/: configure_base.sh  configure_crio.sh  configure_kubernetes.sh  configure_later_kernel.sh  configure_wireguard.sh
pkg/baremetal/inventory/: BUILD.bazel  (+1 more)
pkg/csr/: BUILD.bazel  csr.go  csr_test.go
pkg/manifests/: BUILD.bazel  config.go  config_test.go  kubectl.go  manifests.go
pkg/packer/: BUILD.bazel  packer.go
pkg/record/: BUILD.bazel  recorder.go
pkg/scope/: BUILD.bazel  baremetal.go  baremetalmachine.go  cluster.go  hcloudClient.go  hetznerbaremetalmachine.go  hrobotClient.go  machine.go  machine_test.go  volume.go
(+180 files in other folders)
