load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/simonswine/cluster-api-provider-hetzner
# gazelle:proto disable_global
gazelle(name = "gazelle")

load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

container_bundle(
    name = "images",
    images = {
        "{STABLE_DOCKER_REGISTRY}/cluster-api-provider-hetzner:{STABLE_DOCKER_TAG}": "//cmd/cluster-api-provider-hetzner:image",
    },
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//api/v1alpha3:all-srcs",
        "//cmd/cluster-api-provider-hetzner:all-srcs",
        "//controllers:all-srcs",
        "//hack:all-srcs",
        "//manifests:all-srcs",
        "//packer:all-srcs",
        "//pkg/cloud/resources/floatingip:all-srcs",
        "//pkg/cloud/resources/location:all-srcs",
        "//pkg/cloud/resources/network:all-srcs",
        "//pkg/cloud/resources/server:all-srcs",
        "//pkg/cloud/resources/volume:all-srcs",
        "//pkg/cloud/scope:all-srcs",
        "//pkg/cloud/utils:all-srcs",
        "//pkg/manifests:all-srcs",
        "//pkg/packer:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)
