load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/cluster-api-provider-hcloud/cluster-api-provider-hcloud
# gazelle:proto disable_global
gazelle(name = "gazelle")

load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

container_bundle(
    name = "images",
    images = {
        "{STABLE_DOCKER_REGISTRY}:{STABLE_DOCKER_TAG}": "//cmd/cluster-api-provider-hcloud:image",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "images.push",
    bundle = ":images",
    tags = ["manual"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//api/v1alpha3:all-srcs",
        "//cmd/cluster-api-provider-hcloud:all-srcs",
        "//config:all-srcs",
        "//controllers:all-srcs",
        "//hack:all-srcs",
        "//manifests:all-srcs",
        "//packer/centos-7_k8s-universal:all-srcs",
        "//packer/centos-8_k8s-v1.19.0:all-srcs",
        "//packer/centos-8_k8s-v1.19.0-privnet:all-srcs",
        "//pkg/cloud/resources/loadbalancer:all-srcs",
        "//pkg/cloud/resources/location:all-srcs",
        "//pkg/cloud/resources/network:all-srcs",
        "//pkg/cloud/resources/server:all-srcs",
        "//pkg/cloud/resources/volume:all-srcs",
        "//pkg/cloud/scope:all-srcs",
        "//pkg/cloud/utils:all-srcs",
        "//pkg/csr:all-srcs",
        "//pkg/manifests:all-srcs",
        "//pkg/packer:all-srcs",
        "//pkg/record:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
        ],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)
