load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hcloudcluster_controller.go",
        "hcloudmachine_controller.go",
        "hcloudvolume_controller.go",
        "kubeadmcontrolplanes_controller.go",
    ],
    importpath = "github.com/simonswine/cluster-api-provider-hcloud/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "//pkg/cloud/resources/floatingip:go_default_library",
        "//pkg/cloud/resources/location:go_default_library",
        "//pkg/cloud/resources/network:go_default_library",
        "//pkg/cloud/resources/server:go_default_library",
        "//pkg/cloud/resources/volume:go_default_library",
        "//pkg/cloud/scope:go_default_library",
        "//pkg/manifests:go_default_library",
        "//pkg/packer:go_default_library",
        "//pkg/record:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_cluster_api//api/v1alpha3:go_default_library",
        "@io_k8s_sigs_cluster_api//controlplane/kubeadm/api/v1alpha3:go_default_library",
        "@io_k8s_sigs_cluster_api//util:go_default_library",
        "@io_k8s_sigs_cluster_api//util/patch:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["suite_test.go"],
    data = ["@kubebuilder_linux_amd64_bin//:bin"],
    embed = [":go_default_library"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/envtest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
