load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "baremetal_controller.go",
        "cluster_csr_controller.go",
        "controllers.go",
        "hcloudcluster_controller.go",
        "hcloudmachine_controller.go",
        "hcloudvolume_controller.go",
        "hetznerbaremetalmachine_controller.go",
    ],
    importpath = "github.com/cluster-api-provider-hcloud/cluster-api-provider-hcloud/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha3:go_default_library",
        "//pkg/baremetal:go_default_library",
        "//pkg/baremetal/inventory:go_default_library",
        "//pkg/cloud/resources/loadbalancer:go_default_library",
        "//pkg/cloud/resources/location:go_default_library",
        "//pkg/cloud/resources/network:go_default_library",
        "//pkg/cloud/resources/server:go_default_library",
        "//pkg/cloud/resources/volume:go_default_library",
        "//pkg/csr:go_default_library",
        "//pkg/manifests:go_default_library",
        "//pkg/packer:go_default_library",
        "//pkg/scope:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//certificates/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_cluster_api//api/v1alpha3:go_default_library",
        "@io_k8s_sigs_cluster_api//util:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["suite_test.go"],
    data = ["@kubebuilder_linux_amd64_bin//:bin"],
    embed = [":go_default_library"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
