load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json_test")

filegroup(
    name = "config_files",
    srcs = [
        "config.jsonnet",
        "config-extvar.jsonnet",
    ],
)

jsonnet_library(
    name = "config",
    srcs = [
        ":config_files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//manifests/calico:lib",
        "//manifests/hcloud-cloud-controller-manager:lib",
        "//manifests/hcloud-csi:lib",
        "//manifests/hcloud-ip-floater:lib",
        "//manifests/kube-keepalived-vip:lib",
        "//manifests/metrics-server:lib",
    ],
)

jsonnet_to_json_test(
    name = "test_config_simple",
    src = "test_config_simple.jsonnet",
    golden = "test_config_simple.result.json",
    deps = [":config"],
)

filegroup(
    name = "utils_files",
    srcs = [
        "utils.libsonnet",
    ],
)

jsonnet_library(
    name = "utils",
    srcs = [
        ":utils_files",
    ],
    visibility = ["//visibility:public"],
)

jsonnet_to_json_test(
    name = "test_utils_envreplace",
    src = "test_utils_envreplace.jsonnet",
    golden = "test_utils_envreplace.result.json",
    deps = [":utils"],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "manifests",
    srcs = [
        ":config",
    ],
    include_runfiles = True,
    mode = "0o644",
    package_dir = "manifests-config",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//manifests/calico:all-srcs",
        "//manifests/hcloud-cloud-controller-manager:all-srcs",
        "//manifests/hcloud-csi:all-srcs",
        "//manifests/hcloud-ip-floater:all-srcs",
        "//manifests/kube-keepalived-vip:all-srcs",
        "//manifests/metrics-server:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
