load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json_test")

filegroup(
    name = "config_files",
    srcs = [
        "config.jsonnet",
        "config-extvar.jsonnet",
    ],
)

jsonnet_library(
    name = "config",
    srcs = [
        ":config_files",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "utils_files",
    srcs = [
        "utils.libsonnet",
    ],
)

jsonnet_library(
    name = "utils",
    srcs = [
        ":utils_files",
    ],
    visibility = ["//visibility:public"],
)

jsonnet_to_json_test(
    name = "test_utils_envreplace",
    src = "test_utils_envreplace.jsonnet",
    golden = "test_utils_envreplace.result.json",
    deps = [":utils"],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "manifests",
    srcs = [
        ":config",
    ],
    include_runfiles = True,
    mode = "0o644",
    package_dir = "manifests-config",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
