load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "groupversion_info.go",
        "hetznercluster_types.go",
        "hetznermachine_types.go",
        "hetznervolume_types.go",
        "tags.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/simonswine/cluster-api-provider-hetzner/api/v1alpha3",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
    ],
)
