load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "baremetalmachine_conversion.go",
        "baremetalmachine_types.go",
        "groupversion_info.go",
        "hcloudcluster_conversion.go",
        "hcloudcluster_types.go",
        "hcloudcluster_webhook.go",
        "hcloudmachine_conversion.go",
        "hcloudmachine_types.go",
        "hcloudmachine_webhook.go",
        "hcloudmachinetemplate_conversion.go",
        "hcloudmachinetemplate_types.go",
        "hcloudvolume_conversion.go",
        "hcloudvolume_types.go",
        "hetznerbaremetalmachine_conversion.go",
        "hetznerbaremetalmachine_types.go",
        "hetznerbaremetalmachine_webhook.go",
        "hetznerbaremetalmachinetemplate_conversion.go",
        "hetznerbaremetalmachinetemplate_types.go",
        "tags.go",
        "webhooks.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/cluster-api-provider-hcloud/cluster-api-provider-hcloud/api/v1alpha3",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
        "@io_k8s_sigs_cluster_api//api/v1alpha3:go_default_library",
        "@io_k8s_sigs_cluster_api//errors:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/scheme:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hcloudcluster_webhook_test.go",
        "hcloudmachine_webhook_test.go",
    ],
    embed = [":go_default_library"],
)
