load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "scripts",
    srcs = glob(["scripts/*.sh"]),
)

filegroup(
    name = "autosetup",
    srcs = [
        "autosetup",
    ],
)

pkg_tar(
    name = "baremetal",
    srcs = [
        ":scripts",
        ":autosetup",
    ],
    mode = "0o644",
    package_dir = "centos-8_k8s-v1.19.0-runc-baremetal-config",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
