load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json_test")

filegroup(
    name = "files",
    srcs = [
        "cilium.libsonnet",
        "ipsec.libsonnet",
        "manifests.json",
        "selinux.libsonnet",
    ],
)

jsonnet_library(
    name = "lib",
    srcs = [
        ":files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//manifests:utils",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
