load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

filegroup(
    name = "files",
    srcs = [
        "hcloud-metallb-floater.libsonnet",
        "manifests.json",
    ],
)

jsonnet_library(
    name = "lib",
    srcs = [
        ":files",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//manifests:utils",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
