load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json_test")

filegroup(
    name = "files",
    srcs = [
        "kube-keepalived-vip.libsonnet",
    ],
)

jsonnet_library(
    name = "lib",
    srcs = [
        ":files",
    ],
    visibility = ["//visibility:public"],
)

jsonnet_to_json_test(
    name = "test_basic",
    src = "test_basic.jsonnet",
    golden = "test_basic.result.json",
    deps = [":lib"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
