load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

filegroup(
    name = "files",
    srcs = [
        "metrics-server.libsonnet",
        "manifests.json",
    ],
)

jsonnet_library(
    name = "lib",
    srcs = [
        ":files",
    ],
    deps = [
        "//manifests:utils",
    ],
    visibility = ["//visibility:public"],
)
